corrected units position on smaller screens

--- a/src/style.css
+++ b/src/style.css
@@ -228,7 +228,8 @@ input::placeholder {
   }
 
   .units {
-    top: -25px;
+    top: -60px;
+    margin-left: 60px;
   }
 
   .temperature {
